--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <ul>
         <li> Apple  </li> 
         <li> Pear   </li>
-        <li> Berry  </li>      
+        <li> Berry  </li>   
+        <li> Banana  </li>    
     </ul>
 </body>
 </html>
