--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <li> Apple  </li> 
         <li> Pear   </li>
         <li> Berry  </li>   
-        <li> Banana  </li>    
+        <li> Banana  </li> 
+        <li> Orange </li>   
     </ul>
 </body>
 </html>
