--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
     <ul>
         <li> Apple  </li> 
-        <li> Pear   </li>
+        <li> Bear   </li>
         <li> Berry  </li>   
         <li> Banana  </li>    
     </ul>
